  * Improving performance when the flattened points are requested repeatedly without modifying the path.
  - AddArc methods: the startAngle parameter is respected even when a full ellipse is added. Matters if the arc is
    connected to other path segments.
  - StartFigure: not marking the figure closed when called on an empty path.
+ TransformationMatrix struct:
  + New CreateTranslation, CreateScale, CreateRotation and CreateRotationDegrees overloads with Vector2 parameter.
  + New Transform methods to transform a point
  + New TryInvert method


~~~~~~~~~
- v9.1.1:
~~~~~~~~~

- KGySoft.Drawing.Imaging namespace
===================================
- PredefinedColorsQuantizer class:
  - FromCustomFuction(Func<Color32, Color32>, KnownPixelFormat) method: Contrary to the documentation, the
    quantizing function was only called with non-alpha colors, after blending with black background. This bug
    appeared in v9.0.0. The fix affects also some other methods, e.g. FromBitmapData or ToGrayscale.


~~~~~~~~~
- v9.1.0:
~~~~~~~~~

- KGySoft.Drawing.Imaging namespace
===================================
- BitmapDataExtensions class:
  - Some End* methods of the Async APM (old Begin/End pattern) methods that rely on the TransformColors
    implementation could throw an InvalidOperationException in v9.0.0.


~~~~~~~~~
! v9.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Dropping support for .NET Core 2.0. Manual compilation for .NET Core 2.0 is still possible but the public NuGet
  packages are not going to support this platform anymore. If you target the .NET Core 2.0 platform in your project,
  the v9.0.0 version of the NuGet package will pick the .NET Standard 2.0 build instead.

! General changes:
===================
! All methods with a ParallelConfig/AsyncConfig/TaskConfig parameter (breaking only on Windows .NET 5.0 and below):
  ! When AsyncConfigBase.MaxDegreeOfParallelism is zero or less, then the maximum degree of parallelism was